--- a/app/design/frontend/Alfakher/globalhookah/Magento_PageBuilder/web/css/source/content-type/tabs/_default.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_PageBuilder/web/css/source/content-type/tabs/_default.less
@@ -44,9 +44,9 @@
                     display: block;
                     font-weight: @font-weight__regular;
                     position: relative;
-                    transition: all .3s;
                     vertical-align: middle;
                     white-space: normal;
+                    padding: 1.5rem 0;
 
                     span.tab-title {
                         display: block;
@@ -85,7 +85,6 @@
                         color: @hookah_theme_color;
                         font-weight: @font-weight__bold;
                         position: relative;
-                        transition: all .3s;
                         &::after {
                             display: none;
                         }
@@ -95,8 +94,8 @@
         }
 
         .tabs-content {
-            border: none;
-            border-top: 1px solid @hookah_theme_color;
+            top: -4px;
+            border-top: 5px solid #C7DFCE !important;
             box-sizing: border-box;
             padding-top: 30px;
             position: relative;
@@ -197,6 +196,10 @@
                 border-left: 1px solid @color_ccc;
             }
         }
+        .tabs-content {
+            border-top: 3px solid #C7DFCE !important;
+            top:-2px;
+        }
     }
 }
 
@@ -254,7 +257,6 @@
                     height: 100%;
                     justify-content: center;
                     min-height: 42px;
-                    padding: .8rem .5rem;
                     text-align: center;
                     &::after {
                         display: none;
@@ -263,7 +265,8 @@
             }
         }
         .tabs-content {
-            border-top: none;
+            border-top: 3px solid #C7DFCE !important;
+            top:-2px;
         }
     }
 }
