--- a/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extend.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extend.less
@@ -768,6 +768,13 @@
             }
         }
     }
+    .top_products {
+        div[data-content-type='tabs'] .tabs-navigation {
+            li.tab-header.ui-state-active .ui-tabs-anchor {
+                padding:  0.6rem 0 !important;
+            }
+        }
+    }
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
@@ -1090,7 +1097,7 @@
                     font-size: 1.3rem;
                 }
                 a.tab-title {
-                    padding: 0rem;
+                    padding: 1rem 0;
                 }
             }
             .tab-title { 
@@ -1105,7 +1112,7 @@
                 }
                 li.tab-header.ui-state-active .ui-tabs-anchor {
                     border-bottom: 3px solid #169C60 ;
-                    padding: 0.5rem 0;
+                    padding:  0;
                 }
             }
             .product-item-brand {
