--- a/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extends.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extends.less
@@ -693,3 +693,12 @@
         }
     }
 }
+@media only screen and (min-width: 1024px) and (max-width: 1920px) {
+    .top_products {
+        div[data-content-type='tabs'] .tabs-navigation li.tab-header {
+            a.tab-title {
+                font-size:2rem;
+            }
+        }
+    }
+}
